on-prem-ngwaf-integrations/k8s-apache_apisix-rev-proxy/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started-ip
  namespace: ingress-apisix
spec:
  ingressClassName: apisix
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fastly-ngwaf
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngwaf-apache-apisix-deployment
  namespace: ingress-apisix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngwaf-apache-apisix-deployment
  template:
    metadata:
      labels:
        app: ngwaf-apache-apisix-deployment
    spec:
      containers:
      - name: sigsci-agent
        image: signalsciences/sigsci-agent:latest
        volumeMounts:
        - name: sigsci-tmp
          mountPath: /sigsci/tmp
      - name: nginx
        image: nginx:alpine
      volumes:
      - name: sigsci-tmp
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fastly-ngwaf
  namespace: ingress-apisix
spec:
  selector:
    app: ngwaf-apache-apisix-deployment
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
